# cppenv

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build.bat
.github/workflows/: ci.yml
example/: .env  main.cpp
include/cppenv/: EnvLoader.hpp  EnvManager.hpp  EnvParser.hpp  EnvStore.hpp  IEnvLoader.hpp  IEnvManager.hpp  IEnvParser.hpp  IEnvStore.hpp  cppenv.hpp  cppenv2.hpp  types.hpp
tests/: .env  CMakeLists.txt  samplefile.env.txt  test.env  test_UTF-8_file_key.cpp  test_env_manager.cpp  test_loader.cpp  test_unicode.cpp  文件名.env
